# TemporalScope

./: .all-contributorsrc  .bandit  .env.example  .flake8  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SCIENTIFIC_LITERATURE.md  SECURITY.md  codecov.yml  conda-environment-extras.yml  condalog.txt  generate_docs.sh  mkdocs.yml  mypy.ini  precommit_quality_assurance.sh  pyproject.toml  run_tests.sh  setup.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE_EXTERNAL  dependabot.yml  pull_request_template.md  test.yml
.github/ISSUE_TEMPLATE/: bug_report.md  roadmap-feature-request.md
.github/workflows/: ci.yml  license-compliance.yml  main.yml  test.yml
assets/dev_tools/: clean.sh
docs/: Makefile  citation.md  conf.py  contributing.md  index.md  index.rst  installation.md  license_and_legal.md  make.bat  modules.rst  quick_start.md  references.md  roadmap.md  temporalscope.core.rst  temporalscope.metrics.rst  temporalscope.partition.rst  temporalscope.rst  temporalscope.tests.rst  usage.md
docs/_autosummary/: temporalscope.api.rst  temporalscope.timeseriesdata.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_autosummary/: temporalscope.api.html  temporalscope.methods.mean_absolute_shap.html  temporalscope.timeseriesdata.html
docs/_build/html/_sources/: index.rst.txt
docs/css/: colors.css  mkdocstrings.css
docs/methods/: mean_absolute_shap.md
docs/overrides/: main.html
notebooks/: 0_tutorial_loading_data.ipynb  0_tutorial_timeseries_data.ipynb  Untitled.ipynb
notebooks/introduction/: 0_tutorial_load_data_timeframe.ipynb  0_tutorial_loading_data.ipynb  1_tutorial_partion.ipynb  1_tutorial_partion_data.ipynb
notebooks/tutorials_introduction/: 0_tutorial_load_data_timeframe.ipynb  1_tutorial_partion_data.ipynb
scripts/: gen_ref_pages.py  gen_tutorial_pages.py
setup_qa_scripts/: generate_docs.sh  precommit_quality_assurance.sh  setup.sh
src/temporalscope/: README.md  conf.py
src/temporalscope/core/: __init__.py  core_utils.py  exceptions.py  temporal_core_processing.py  temporal_data_loader.py  temporal_model_trainer.py  temporal_target_shifter.py  utils.py
src/temporalscope/core/time_frame/: __init__.py  time_frame.py  validation.py
src/temporalscope/datasets/: dataset_validator.py  datasets.py  synthetic_data_generator.py
src/temporalscope/metrics/: masv.py
src/temporalscope/modeling/: temporal_model_trainer.py
src/temporalscope/partition/: base.py  base_protocol.py  data_checks.py  padding.py  partition_validators.py  sliding_window.py
src/temporalscope/partition/padding/: functional.py
src/temporalscope/partition/single_target/: sliding_window.py  utils.py
src/temporalscope/target_shifters/: single_step.py
temporalscope/: README.md  conf.py  config.py  temporal_data_loader.py  temporal_model_trainer.py  timeseriesdata.py
temporalscope/core/: temporal_data_loader.py  temporal_model_trainer.py  utils.py
temporalscope/methods/: mean_absolute_shap.py
temporalscope/metrics/: masv.py
temporalscope/partioning/: base_temporal_partioner.py  naive_partitioner.py  sliding_window_partioner.py
temporalscope/partition/: base.py  base_temporal_partioner.py  data_checks.py  partition_guidelines.py  sliding_window.py  sliding_window_partioner.py
temporalscope/tests/unit/: test_core_conf.py  test_core_config.py  test_core_temporal_data_loader.py  test_core_utils.py  test_pandas_backend.py  test_partion_data_checks.py  test_partion_guidelines.py  test_temporal_data_loader.py  test_temporalscope.py
temporalscope/tests/unit/timeseriesdata/: test_pandas_backend.py
test/integration/: test_notebooks.py
test/notebook/: test_notebooks.py
test/unit/: test_core_conf.py  test_core_exceptions.py  test_core_temporal_data_loader.py  test_core_temporal_target_shifter.py  test_core_utils.py  test_datasets.py  test_partion_data_checks.py  test_partition_padding.py  test_partition_validators.py
test/unit/core/: test_core_utils.py  test_exceptions.py  test_narwhals_patterns.py  test_temporal_data_loader.py  test_temporal_target_shifter.py
test/unit/datasets/: test_dataset_validator.py  test_datasets.py  test_synthetic_data_generator.py
test/unit/partition/: test_padding_functional.py  test_padding_validation.py  test_partition_padding.py  test_partition_validators.py  test_single_target_utils.py  test_utils.py
test/unit/target_shifters/: test_single_step.py
tests/: test_temporalscope.py
tests/unit/: test_core_conf.py  test_partion_data_checks.py
tutorial_notebooks/: 3_health_monitoring_analysis.ipynb  speed_test_generators.ipynb
tutorial_notebooks/End to End/: synthetic_health_monitoring_analysis.ipynb
tutorial_notebooks/Introduction/: 1_load_data_timeframe.ipynb  2_single_step_target_shifting.ipynb  3_xai_data_quality_checks.ipynb
tutorial_notebooks/Narwhals/: 1_narwhals_ml_patterns.ipynb  2_narwhals_general_patterns.ipynb  3_narwhals_lazy_vs_eager.ipynb  4_narwhals_complex_functions.ipynb  5_narwhals_ai_data_validation.ipynb  6_narwhals_ai_time_series.ipynb  7_narwhals_converting_columns.ipynb
tutorial_notebooks/end_to_end/: synthetic_health_monitoring_analysis.ipynb
tutorial_notebooks/introduction/: 0_load_data.ipynb  0_load_data_timeframe.ipynb  0_narhwals_backend.ipynb  1_load_data_target_shifter.ipynb  1_load_data_timeframe.ipynb  1_target_shifter.ipynb  1_tutorial_partion_data.ipynb  2_single_step_target_shifting.ipynb  2_sliding_window_target_shifter.ipynb  3_dataset_validation.ipynb  3_xai_data_quality_checks.ipynb
tutorial_notebooks/narwhals/: 0_narwhals_ml_patterns.ipynb  1_narwhals_general_patterns.ipynb  1_narwhals_ml_patterns.ipynb  3_narwhals_lazy_vs_eager.ipynb  4_narwhals_complex_functions.ipynb  4_narwhals_converting_columns.ipynb  5_narwhals_ai_data_validation.ipynb  6_narwhals_ai_time_series.ipynb
(+8 files in other folders)
