[build-system]
requires = ["hatchling>=1.8.0",  "uv>=0.5.1"]
build-backend = "hatchling.build"

[project]
name = "temporalscope"
dynamic = ["version"]
description = "TemporalScope: Model-Agnostic Temporal Feature Importance Analysis."
authors = [
    { name = "Philip Ndikum", email = "philip-ndikum@users.noreply.github.com" },
    { name = "Serge Ndikum" },
    { name = "Kane Norman", email = "kanenorman@fas.harvard.edu" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core Explainability Libraries
    "shap>=0.46.0",             # SHAP (SHapley Additive exPlanations): For model interpretability and feature importance in machine learning.
    "borutashap>=1.0.17",       # Boruta-SHAP: Combines SHAP with Boruta for feature selection, helping identify the most important features.
    "lime>=0.2.0.1",            # LIME (Local Interpretable Model-agnostic Explanations): Enables model-agnostic interpretability, focusing on local, instance-specific explanations.
    
    # General Machine Learning and Statistics
    "scikit-learn>=1.5.1",      # Scikit-Learn: Essential machine learning library for classification, regression, and clustering.
    "lightgbm>=4.5.0",          # LightGBM: Gradient-boosted decision tree library that’s efficient for high-dimensional data.
    "statsmodels>=0.14.2",      # Statsmodels: Provides statistical models and hypothesis tests, useful for traditional time series analysis.
    
    # Data Manipulation and Storage
    "pandas>=1.5.0",            # Pandas: Core library for handling structured data in DataFrames.
    "modin[all]>=0.31.0",       # Modin: Parallelizes Pandas operations for large datasets with Dask/Ray backend.
    "pyarrow>=17.0.0",          # PyArrow: Enables efficient columnar data format (Arrow) for fast data processing and storage, commonly used with Parquet files.
    "polars>=1.5.0",            # Polars: High-performance DataFrame library, ideal for handling large datasets in memory.
    "dask[dataframe]>=2024.7",  # Dask DataFrame: Handles parallelized computations for very large datasets.
    
    # Specialized Computation
    "flax>=0.8.5",              # Flax: Neural network library for JAX, useful for building deep learning models.
    "jax>=0.4.31",              # JAX: Accelerated computation for machine learning research, supporting CPU/GPU/TPU backends.
    
    # Backend-Agnostic Processing
    "narwhals>=0.2.3",          # Narwhals: Ensures backend compatibility across Pandas, Polars, Modin, and other dataframes, optimizing performance.
    
    # Environment Configuration
    "python-dotenv>=1.0.1",     # Python-Dotenv: Manages environment variables for secure and flexible configuration.
    
    # Markdown Table Display
    "tabulate>=0.9.0",          # Tabulate: Allows Markdown-friendly table formatting for DataFrames in Narwhals.
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "Shap",
    "Borutashap",
    "Feature-Importance",
    "Temporal-Feature-Importance",
    "Temporal-Feature-Analysis",
    "XAI",
    "ML",
    "AI",
    "Machine-Learning",
    "Artificial-Intelligence",
    "TemporalScope",
    "Time-Series",
]

[project.optional-dependencies]
docs = [
    "pydata-sphinx-theme",
    "myst-parser",
    "sphinx >=4.0",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinx-autodoc-annotation",
    "sphinx-autoapi",
]

[project.urls]
"Source code" = "https://github.com/philip-ndikum/TemporalScope"
Documentation = "https://temporalscope.readthedocs.io/en/latest/"

[tool.hatch.envs.default]
dependencies = ["pre-commit", "ruff", "jupyterlab", "notebook", "commitizen"]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.test]
extra-dependencies = ["pytest", "pytest-cov", "pytest-custom_exit_code", "pytest-mock"]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -WTb html . _build"
serve = "python -m http.server --directory _build"

[tool.hatch.envs.test.scripts]
unit = 'pytest --cov-report xml:coverage.xml --cov="temporalscope" -m "not integration" {args:test}'
integration = 'pytest --cov-report xml:coverage.xml --cov="temporalscope" -m "integration" {args:test}'
quality-assurance = """
pytest &&
docformatter --check --recursive --wrap-summaries 120 --wrap-descriptions 120 src/temporalscope || \
docformatter --in-place --recursive --wrap-summaries 120 --wrap-descriptions 120 src/temporalscope &&
ruff check src/temporalscope --output-format=full --show-files --show-fixes &&
mypy src/temporalscope --ignore-missing-imports --show-error-codes --warn-unreachable &&
bandit -r src/temporalscope
"""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "[%(asctime)s][%(levelname)s] %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
extend-exclude = ["*.pyc", "tutorial_notebooks/*"]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "C4",   # flake8-comprehensions
    "C90",  # McCabe cyclomatic complexity
    "E501", # Long lines
    "EXE",  # flake8-executable
    "F",    # Pyflakes
    "INT",  # flake8-gettext
    "PERF", # Perflint
    "PL",   # Pylint
    "Q",    # flake8-quotes
    "SIM",  # flake8-simplify
    "SLOT", # flake8-slots
    "T10",  # flake8-debugger
    "W",    # pycodestyle
    "YTT",  # flake8-2020
    "I",    # isort
    # built-in shadowing
    "A001", # builtin-variable-shadowing
    "A002", # builtin-argument-shadowing
    "A003", # builtin-attribute-shadowing
    # docstring rules
    "D", # flake8-docstrings
]

ignore = [
    "D400",    # Ignore "First line should end with a period" for docstrings.
    "D401",    # Ignore "First line should be in imperative mood" for docstrings.
    "D415",    # Ignore "First line should end with a period, question mark, or exclamation point."
    "E501",    # Ignore "Line too long" in docstrings/comments for exceeding 120 characters.
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "PERF401", # Use a list comprehension to create a transformed list
    "PLR1714", # repeated-equality-comparison
    "PLR5501", # collapsible-else-if
    "PLW2901", # redefined-loop-name
    "SIM108",  # if-else-block-instead-of-if-exp
    "PLR0913", # too many arguments
    "SIM102",  # temporary
    "C901",    # temporary
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D211",    # No blank lines allowed before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "D203",    # 1 blank line required before class docstring
]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["A001", "D103"]

[tool.mypy]
files = "src/temporalscope"
python_version = "3.10"
ignore_missing_imports = true
warn_unreachable = true
exclude = 'test/*'
warn_return_any = false      # Turn off MyPy warnings for missing return types

[tool.bandit]
exclude_dirs = ["test"]

[tool.hatch.build.targets.wheel]
packages = ["src/temporalscope"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/VERSION.txt"]

[tool.hatch.version]
path = "VERSION.txt"
pattern = "(?P<version>.+)"

[tool.hatch.envs.default.scripts]
check = "ruff check {args}"
fix = "ruff check --fix"
format = "ruff format {args}"
format-check = "ruff format --check {args}"
docformat = """
docformatter --check --recursive --wrap-summaries 120 --wrap-descriptions 120 src/temporalscope || \
docformatter --in-place --recursive --wrap-summaries 120 --wrap-descriptions 120 src/temporalscope
"""
clear-coverage = "coverage erase"
generate-kernel = """
python -m ipykernel install --user --name temporalscope-kernel --display-name "TemporalScope"
echo "Jupyter kernel 'TemporalScope' created. You can now use it in Jupyter notebooks."
"""

[tool.commitizen]
version = "0.1.0"
update_changelog_on_bump = true
tag_format = "v$version"
version_files = ["pyproject.toml:version", "VERSION.txt"]

[tool.hatch.metadata]
allow-direct-references = true
